cmake_minimum_required(VERSION 3.20)
project(data_structure_finale)

set(CMAKE_CXX_STANDARD 11)

add_executable(data_structure_finale main.cpp func.h)

add_executable(hfmTree hfmTree.txt)
add_executable(TreePrint TreePrint.txt)
add_executable(CodeFile CodeFile.txt)
add_executable(CodePrint CodePrint.txt)
add_executable(TextFile TextFile.txt)
add_executable(ToBeTran ToBeTran.txt)